--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <link rel=icon href=assets/icon.png>
 <link rel=stylesheet href=css/style.css>
 
-<div id=main>
-	<section id=videoPlayer></section>
-</div>
+<div id=videoPlayer></div>
 
 <script src="https://jspm.io/system@0.19.js"></script>
 <script src="assets/advancedSettings.js"></script>
